# enigma-da

./: .dockerignore  .env.example  .gitignore  .gitmodules  AGENTS.md  Cargo.toml  Dockerfile  Dockerfile.local  README.local.md  build.rs  config.py  docker-compose.local.yml  docker-compose.yml  local-dev.sh  logger.py  peers.json  requirements.txt  start-client.sh  start-enclave.sh  start.sh  vsock-proxy.yaml
.github/workflows/: cargo_test.yml  release.yml
docs/: encryption-service.md  readme.md  setup.md
enclave/: Dockerfile  buildEnclaveAndRunOnEC2.sh  enclaveServer.py  enclave_server.py  forwarder.py  handlers.py  kms.py  nsm_interface.py  requirements.txt  run.sh  server.py  vsock-proxy.yaml
enclave/vssspy/: Cargo.toml
enclave/vssspy/src/: lib.rs
host/: app.py  appClient.py  attestation_verifier.py  db.py  kms_client.py  models.py  routes.py  utils.py  vsock.py
keygen/: Cargo.toml
keygen/conf/: node1.keystore  node2.keystore  node3.keystore  node4.keystore
keygen/conf/pub/: ECIESThreshold_1234.pub
keygen/keys/: Cargo.toml
keygen/keys/src/: interface.rs  key_generator.rs  key_type.rs  keys.rs  keystore.rs  lib.rs  scheme_types_imp.rs
keygen/src/: lib.rs
keygen/src/conf/: node1.keystore  node2.keystore  node3.keystore  node4.keystore
keygen/src/conf/pub/: ECIESThreshold_1234.pub
keygen/theta_proto/: Cargo.toml
keygen/theta_proto/src/: lib.rs  new_schemes.proto  new_schemes.rs  protocol_types.rs
keygen/utils/: Cargo.toml
keygen/utils/src/: lib.rs
keygen/utils/src/thetacli/: cli.rs
keys/: Cargo.toml
keys/src/: interface.rs  key_generator.rs  key_type.rs  keys.rs  keystore.rs  lib.rs  scheme_types_imp.rs
kms-node/: .dockerignore  .env.example  .gitignore  Cargo.toml  Dockerfile  Readme.md  docker-compose.yml
kms-node/.github/workflows/: build_and_test.yml  lint.yml
kms-node/docs/: genrating_expected_mr_vals.md  setup.md  verifying_quote.md
kms-node/keys 17-45-06-859/: Cargo.toml
kms-node/keys 17-45-06-859/src/: keystore.rs  lib.rs
kms-node/shard_store_demo_node_test_demo_db 18-44-41-935/: db  snap.00000000000000F0
kms-node/src/: lib.rs  main.rs
kms-node/src/p2p/: node.rs  protocol.rs  store.rs  types.rs
kms-node/src/tee/: mod.rs  quote.rs  types.rs  utils.rs
kms-node/src/tests/: mod.rs  p2p.rs  sled.rs  tee.rs
kms-node/src/tests/assets/: dstack_quote_event_log.json  quote.json  report.json
node_key_gen/: Cargo.toml
node_key_gen/src/: main.rs
proto/: Cargo.toml
proto/src/: lib.rs  new_schemes.proto  new_schemes.rs
scripts/: certificates..sh  certificates_local.sh  certificates_prod.sh
service/: Cargo.toml  node.rs  peers.json
service/src/: config.rs  decrypt.rs  error.rs  main.rs  network_manager.rs  tests.rs  tracer.rs  traits.rs  types.rs
service/src/api/: decrypt.rs  encrypt.rs  mod.rs  quote.rs  reencrypt.rs  register.rs
service/src/db/: async_store.rs  mod.rs  store.rs  types.rs
service/src/handler/: worker.rs
service/src/network/: async_manager.rs  mod.rs
service/src/p2p/: node.rs  protocol.rs  store.rs  types.rs
service/src/tests/: decrypt.rs  encrypt.rs  p2p.rs  p2p_store.rs  reencrypt.rs  register.rs
service/src/worker/: async_manager.rs  mod.rs
src/: AGENTS.md  config.rs  crypto.rs  db.rs  error.rs  key_store.rs  main.rs  network_manager.rs  storage.rs  tests.rs  tracer.rs  types.rs  utils.rs
src/api/: AGENTS.md  decrypt.rs  encrypt.rs  mod.rs  participant.rs  private_key_request.rs  quote.rs  reencrypt.rs  register.rs
src/keygen/: Cargo.toml
src/keygen/keys/src/: key_generator.rs  key_type.rs  keys.rs  keystore.rs  lib.rs  scheme_types_imp.rs
src/keygen/keys/src/mcore/: mod.rs
src/keygen/theta_proto/src/: new_schemes.proto  new_schemes.rs  protocol_types.proto
src/keygen/utils/src/thetacli/: cli.rs
src/p2p/: mod.rs  node.rs
src/tests/: decrypt.rs  encrypt.rs  p2p.rs  reencrypt.rs  register.rs  request_private_key.rs
