[workspace]
members = [
    "keygen",
    "keys",
    "proto", 
    "service"]
exclude = ["enigma-kms-node"]
resolver = "2"

[workspace.dependencies]
tokio = { version = "1.36", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_bytes = "0.11"
tower = "0.4"
tower-http = { version = "0.5", features = ["trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
dstack-sdk = { git = "https://github.com/Dstack-TEE/dstack.git", package = "dstack-sdk" }
tiny-keccak = "2.0.2"
alloy = { version = "0.15", default-features = false }
alloy-primitives = "1.1.2"
sled = "0.34"
rstest = "0.20.0"
http-body-util = "0.1.0"
tempfile = "3.8"
async-trait = "0.1"
libp2p = { version = "0.53", features = [
    "tcp",
    "noise",
    "yamux",
    "gossipsub",
    "mdns",
    "request-response",
    "identify",
    "kad",
    "macros",
    "tokio",
    "ping",
] }
lazy_static = "1.4"
anyhow = "1.0.98"
bincode = "1.3.3"
rand = "0.8"
thiserror = "1.0.49"
base64 = "0.21.5"
log = "0.4.17"
k256 = "0.13.2"
sha2 = "0.10.8"
futures = "0.3"
prost = "0.11"
tonic = "0.8"
keygen = { path = "keygen", version = "0.1.0" }
keys = { path = "keys", version = "0.1.0" }
proto = { path = "proto", version = "0.1.0"}
uuid = {version = "=1.8.0" , features = ["v4","fast-rng","macro-diagnostics", "serde"]}
 
