
[package]
name = "enigma-da"
version = "0.0.7"
edition = "2021"


[dependencies]
tokio = { version = "1.36", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_bytes = "0.11"
tower = "0.4"
tower-http = { version = "0.5", features = ["trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
dstack-sdk = { git = "https://github.com/Dstack-TEE/dstack.git", package = "dstack-sdk" }
tiny-keccak = { version = "2.0.2", features = ["keccak"] }
alloy = { version = "0.15", default-features = false }
alloy-primitives = "1.1.2"
rstest = "0.20.0"
http-body-util = "0.1.0"
tempfile = "3.8"
async-trait = "0.1"
lazy_static = "1.4"
anyhow = "1.0.98"
bincode = "1.3.3"
rand = "0.8"
thiserror = "1.0.49"
base64 = "0.21.5"
log = "0.4.17"
k256 = "0.13.2"
sha2 = "0.10.8"
futures = "0.3"
prost = "0.11"
tonic = "0.8"
uuid = {version = "=1.8.0" , features = ["v4","fast-rng","macro-diagnostics", "serde"]}
axum = "0.8.4"
axum-server = {version = "0.7.2", features = ["tls-rustls"]}
dashmap = "5.5"
ecies = "0.2"
secp256k1 = "0.28"
rustls = { version = "0.23.34", features = ["ring"] }
rustls-pemfile = "2.2.0"
dotenv = "0.15.0"
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "sqlite"] }
chrono = "0.4"
hex = "0.4"
sha3 = "0.10"

[dev-dependencies]
rstest = "0.20.0"
http-body-util = "0.1.0"
glob = "0.3"
