[package]
name = "keygen"
version = "0.1.0"
edition = "2024"



[dependencies]  
keys = {path ="keys" , version ="0.1.0"}

theta_proto = {path = "theta_proto", version = "0.1.0"}
tonic = "0.8"
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
serde = { version = "1.0", features = ["derive", "std"] }
rand = "0.8.5"
hex = "0.4.3"
k256 = { version = "0.13.2" }
log = "0.4.17"
log4rs = "1.1.1"
env_logger = "0.9.1"
clap = { version = "4.0.14", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0.49"
base64 = "0.21.5"
atty = "0.2.14"
sha2 = "0.10.8"
futures = "0.3"
terminal-menu = "2.0.6"




[lib]
name = "keygen"
path = "src/lib.rs"

