[package]
name = "keygen"
version = "0.1.0"
edition = "2024"

[dependencies]  
# Use workspace dependencies
keys = { workspace = true }
proto = { workspace = true }
tonic = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
rand = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
base64 = { workspace = true }
k256 = { workspace = true }
sha2 = { workspace = true }
futures = { workspace = true }
hex = "0.4.3"
uuid = {workspace = true}
log = "0.4"
log4rs = "1.2" 

[lib]
name = "keygen"
path = "src/lib.rs"

