[package]
name = "keys"
version = "0.1.0"
edition = "2024"

[dependencies]
proto = { workspace = true }
k256 = { workspace = true }
rand = { workspace = true }
sha2 = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
base64 = { workspace = true }
serde_json = { workspace = true }
prost = { workspace = true }
crypto-bigint = "0.5"
rand_core = "0.6.4"
asn1 = "0.13.0"
rasn = "0.6.1"
ecies = "0.2"
vsss_rs_std = { version = "3.0.0-pre4", package = "vsss-rs-std" }
log = "0.4"
log4rs = "1.2" 
bincode = "1.3"

