[package]
name = "kms-node"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.41.5", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dcap-qvl = "0.1.0"
hex = "0.4.3"
anyhow = "1.0.98"
sha2 = "0.10.7"
bincode = "1.3.3"
async-trait = "0.1"
sled = "0.34"
libp2p = { version = "0.53", features = [
    "tcp",
    "noise",
    "yamux",
    "gossipsub",
    "mdns",
    "request-response",
    "identify",
    "kad",
    "macros",
    "tokio",
    "ping",
] }
log = "0.4.20"
env_logger = "0.11.6"
lazy_static = "1.4"
uuid = {version = "=1.8.0" , features = ["v4","fast-rng","macro-diagnostics", "serde"]}
keys = { path = "../keys" }
dstack-sdk = { git = "https://github.com/Dstack-TEE/dstack.git", package = "dstack-sdk" }

[dev-dependencies]
rstest = "0.5.0"
glob = "0.3" 

[features]
local-quote-verification = []
