[package]
name = "keys"
version = "0.1.0"
edition = "2024"

[dependencies]
theta_proto = {path = "../theta_proto", version = "0.1.0"}
aead = { version = "0.5.2" }


k256 = { version = "0.13.2" }

crypto-bigint = "0.5"
rand = "0.8"
rand_chacha = "0.3"
sha2 = "0.10.7"
thiserror = "1"

tokio = "1.34.0"
x25519-dalek = { version = "2.0.0", features = ["reusable_secrets", "zeroize"]}
signature = { version = "2.2.0" }
zeroize = "1.6.1"
rand_core = "0.6.4"
serde = { version = "1.0", features = ["derive"] }
prost = "0.10"
asn1 = "0.13.0"
base64 = "0.21.5"
log = "0.4.17"
serde_json = "1.0"
rasn = "=0.6.1"
ecies = "0.2"
vsss_rs_std =  { version = "3.0.0-pre4", package = "vsss-rs-std" }

