[package]
name = "keys"
version = "0.1.0"
edition = "2024"

[dependencies]
proto = { path = "../proto" }
k256 = "0.13.2"
rand = "0.8"
sha2 = "0.10.8"
thiserror = "1.0.49"
tokio = { version = "1.36", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
base64 = "0.21.5"
serde_json = "1.0"
prost = "0.11"
crypto-bigint = "0.5"
rand_core = "0.6.4"
asn1 = "0.13.0"
rasn = "0.6.1"
ecies = "0.2"
vsss_rs_std = { version = "3.0.0-pre4", package = "vsss-rs-std" }
log = "0.4"
log4rs = "1.2" 
bincode = "1.3"

